--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -228,9 +228,9 @@
                           <button type="button" id="save_report_json" class="btn mreport-primary-color-1-bg">
                             <i class="fas fa-cloud-upload-alt"></i> Enregistrer
                           </button>
-                          <!--button type="button" id="save_report_html" class="btn mreport-primary-color-2-bg">
-                            <i class="fas fa-file-export"></i> Générer
-                          </button-->
+                          <button type="button" id="view_report_html" class="btn mreport-primary-color-2-bg">
+                            <i class="fas fa-file-export"></i> Aperçu
+                          </button>
                         </div>
                     </div>
                 </div>
@@ -265,10 +265,11 @@
             </div>
 
             <div class="main">
-              <h2 id="composer-report-title"></h2>
-              <ul id="report-composition" class="list-group"></ul>
+              <div class="composer-empty">
+                <p>Sélectionner le rapport à éditer.</p>
+                <p>Puis déposer ici les blocs et dataviz.</p>
+              </div>
             </div>
-
         </div>
     </div>
     <!-- Composer end -->
