--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -31,6 +31,7 @@
     <script src="/static/js/extLibs/papaparse.min.js"></script>
     <script src="/static/js/textConfiguration.js"></script>
     <script src="/static/js/composer.js"></script>
+    <script src="/static/js/themes.js"></script>
     <script src="/static/js/wizard.js"></script>
     <script src="/static/js/report.js"></script>
     <script src="/static/js/admin.js"></script>
@@ -203,7 +204,7 @@
                             <i class="fas fa-file-alt mreport-secondary-color-1"></i> 
                             Rapport sélectionné
                         </label>
-                        <select class="form-control" id="selectedReportComposer"></select>
+                        <select class="form-control" id="selectedReportComposer" disabled></select>
                     </div>
                     <div class="form-group col-3">
                         <label for="selectedReportVersionComposer">
@@ -217,7 +218,7 @@
                             <i class="fas fa-palette mreport-secondary-color-1"></i>
                             Modèle de rendu sélectionné
                         </label>
-                        <select class="form-control" id="selectedModelComposer"></select>
+                        <select class="form-control" id="selectedModelComposer" disabled></select>
                     </div>
                     <div class="form-group col-3">
                         <label>
