Renommage theme => model

--- a/frontend/templates/admin.html
+++ b/frontend/templates/admin.html
@@ -31,7 +31,7 @@
     <script src="/static/js/extLibs/papaparse.min.js"></script>
     <script src="/static/js/textConfiguration.js"></script>
     <script src="/static/js/composer.js"></script>
-    <script src="/static/js/themes.js"></script>
+    <script src="/static/js/models.js"></script>
     <script src="/static/js/wizard.js"></script>
     <script src="/static/js/report.js"></script>
     <script src="/static/js/admin.js"></script>
