--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -20,7 +20,7 @@
             <script type="text/javascript" src="/static/js/wizard.js"></script>
             <script type="text/javascript" src="/static/js/report.js"></script>
             <script type="text/javascript" src="/static/js/saver.js"></script>
-            <script type="text/javascript" src="/static/js/themes.js"></script>
+            <script type="text/javascript" src="/static/js/models.js"></script>
             <link href="/static/css/bootstrap/bootstrap.min.css" rel="stylesheet">
             <link href="/static/css/mreport.css" rel="stylesheet">
             <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
