--- a/frontend/static/css/admin.css
+++ b/frontend/static/css/admin.css
@@ -612,6 +612,11 @@ h5>.badge {
   padding-top: 1em;
 }
 
+.preloader {
+  min-height: 10em;
+  background: #ffffff url('../img/loader.svg') no-repeat center center;
+}
+
 #modal-icon-picker {
   z-index: 10000;
 }
@@ -637,7 +642,9 @@ h5>.badge {
 }
 
 /* hide back of pane during swap */
-.front, .back {
+.card.card-flip .front,
+.card.card-flip .back {
+  background: #fff;
 	-webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
      -o-backface-visibility: hidden;
@@ -645,12 +652,12 @@ h5>.badge {
 }
 
 /* front pane, placed above back */
-.front {
+.card.card-flip .front {
 	z-index: 2;
 }
 
 /* back, initially hidden pane */
-.back {
+.card.card-flip .back {
 	-webkit-transform: rotateY( 180deg );
   -moz-transform: rotateY( 180deg );
   -o-transform: rotateY( 180deg );
@@ -843,10 +850,18 @@ width:100%;
   height:100%;
 }
 
+.full-width {
+  width: 100%;
+}
+
 .btn:hover,
-.btn:focus{
+.btn:focus {
   box-shadow: 0 0 5px #666;
-color:inherit;
+  color:inherit;
+}
+.btn:disabled,
+.btn[disabled] {
+  box-shadow: none;
 }
 
 a:hover,
