--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<meta charset="utf-8">
 		<head>
 			<title>mReport</title>
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+			<meta charset="utf-8" />
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
             <meta name="mobile-web-app-capable" content="yes" />
             <meta name="apple-mobile-web-app-capable" content="yes" />
-			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+            <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
             <script src="/static/js/extLibs/navigo.min.js"></script>
             <script src="/static/js/extLibs/jquery.min.js"></script>
             <script src="/static/js/extLibs/popper.min.js"></script>
